hopefully fixing overflow issues

--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@
 }
 
 html {
-    height: 100%;
+    height: auto;
+    min-height: 100%;
+    display: flex;
 }
 
 body {
@@ -21,6 +23,11 @@ body {
     margin: auto;
     position: relative;
     height: 100%;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .info {
@@ -36,10 +43,9 @@ body {
     align-items: center;
     flex-wrap: wrap;
     margin: auto;
-    position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
+    height: 100%;
+    overflow: auto;
 }
 
 #title {
@@ -50,6 +56,10 @@ body {
     margin-right: auto;
     margin-left: auto;
     display: inline-block;
+}
+
+#load_gif {
+    margin: 0 auto;
 }
 
 #title_caption {
@@ -66,6 +76,7 @@ body {
     justify-content: center;
     text-align: center;
     width: 100%;
+    height: 100%;
 }
 
 @media screen and (orientation: landscape) {
